--- a/app/src/main/res/layout/field_view.xml
+++ b/app/src/main/res/layout/field_view.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:layout_margin="15dp"
-    app:cardElevation="15dp"
     app:cardCornerRadius="15dp"
-    android:layout_height="wrap_content">
+    app:cardElevation="15dp">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvFields"
-        android:layout_margin="15dp"
+    <LinearLayout
+        android:id="@+id/llFields"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:orientation="vertical" />
 </androidx.cardview.widget.CardView>
